# gh2

./: .gitignore  LICENSE  MANIFEST.in  README.md  package.json  pnpm-lock.yaml  pyproject.toml  setup.cfg  setup.py
docs/: examples.md  hello-lighght.md  index.md  introduction.md  package.json  pnpm-lock.yaml  what-is-gh2.md
docs/.vitepress/: config.mts  markdown-it-terminal.js
docs/.vitepress/theme/: Terminal.vue  custom.css  index.ts
docs/api/: color.md  constants.md  environment.md  events.md  image.md  math.md  shape.md  structure.md  time.md  transform.md  typography.md
docs/docs/: api-index.md  get-started.md  what-is-gh2.md
docs/examples/: bar.md  bfs.md  bubble.md  dfs.md  globe.md  heart.md  information.md  insertion.md  mandelbrot-set.md  merge.md  pie.md  prim.md  readme.md  snake.md  zeros.md
docs/src/: hello-lighght.md  index.md
docs/src/.vitepress/: config.mts
docs/src/.vitepress/theme/: custom.css  index.ts
docs/tutorials/: color.md  event.md  image.md  structure.md  typography.md
examples/: mandelbrot-set.py  zeros.py
src/gh2/: __init__.py  map.py  poem.py
tests/: test_poem.py
tests/color/: test_background.py  test_ccolor.py
