[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gh2"
dynamic = ["version"]
description = "The creative coding language for ASCII art and poetic form."
readme = "README.md"
requires-python = ">=3.6"
license = { text = "ISC" }
authors = [{ name = "Bairui SU", email = "subairui@icloud.com" }]
maintainers = [{ name = "Bairui SU", email = "subairui@icloud.com" }]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: Console :: Curses",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3.6",
    "Topic :: Artistic Software",
    "Topic :: Education",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Terminals",
]

[project.urls]
Documentation = "https://github.com/gh2hq/gh2"
Code = "https://github.com/gh2hq/gh2"
"Issue tracker" = "https://github.com/gh2hq/gh2/issues"

[tool.hatch.version]
path = "src/gh2/__init__.py"
pattern = '__version__ = "(?P<version>[^"]+)"'

[tool.hatch.build.targets.wheel]
packages = ["src/gh2"]

[tool.hatch.build]
include = ["src/gh2/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
