[metadata]
name = gh2
url = https://github.com/gh2hq/gh2
project_urls = 
    Documentation = https://gh2.dev/
    Source Code = https://github.com/gh2hq/gh2
    Issue Tracker = https://github.com/gh2hq/gh2/issues
license = ISC
author = Bairui SU
author_email = subairui@icloud.com
maintainer = Bairui SU
maintainer_email = subairui@icloud.com
description = The creative coding language for ASCII art and poetic form.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: ISC License (ISCL)
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Artistic Software
    Topic :: Education
    Topic :: Multimedia :: Graphics
    Topic :: Terminals

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >=3.8

[options.packages.find]
where = src
exclude =
    docs
    docs.*
